--- a/.github/workflows/app-frontend-cypress.yml
+++ b/.github/workflows/app-frontend-cypress.yml
@@ -21,35 +21,14 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  install:
-    name: Install cypress, build frontend
+  build-frontend:
+    name: Build Frontend
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: src/App/frontend/
-    container:
-      image: cypress/browsers:node-22.13.1-chrome-133.0.6943.53-1-ff-135.0-edge-132.0.2957.140-1@sha256:914c9814a9567f32660203db7ecd610b8f8fede6e9103885728b3bd3f6dca4ff
     steps:
       - name: Checkout
         uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
-
-      - name: Install dependencies
-        run: yarn --immutable
-
-      - name: Cypress install
-        uses: cypress-io/github-action@7ef72e250a9e564efb4ed4c2433971ada4cc38b4 # v6
-        with:
-          working-directory: src/App/frontend/
-          # Disable running of tests within install job
-          runTests: false
-          build: yarn run build
-
-      - name: Save build folder
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
-        with:
-          name: app-frontend-dist
-          if-no-files-found: error
-          path: src/App/frontend/dist
+      - name: Build frontend
+        uses: ./.github/actions/app-build-frontend
 
   build-docker-images:
     name: Build Docker Images
@@ -70,7 +49,7 @@ jobs:
       (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false)
     runs-on: ubuntu-latest
     timeout-minutes: 60
-    needs: [install, build-docker-images]
+    needs: [build-frontend, build-docker-images]
     defaults:
       run:
         working-directory: src/App/frontend/
@@ -158,7 +137,7 @@ jobs:
       (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == true)
 
     runs-on: ubuntu-latest
-    needs: [install, build-docker-images]
+    needs: [build-frontend, build-docker-images]
     defaults:
       run:
         working-directory: src/App/frontend/
