immutable instead of frozen lockfile

--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -82,7 +82,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: src/App/frontend
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       - name: Run Lighthouse CI
         id: lighthouse-ci
