--- a/.github/actions/app-run-local-env/action.yaml
+++ b/.github/actions/app-run-local-env/action.yaml
@@ -44,6 +44,27 @@ runs:
         fi
 
         echo "profile-args=$profile_args" >> $GITHUB_OUTPUT
+
+    - name: Set up Docker Buildx
+      if: ${{ inputs.run-localtest == 'true' }}
+      uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
+
+    - name: Login to GitHub Container Registry
+      if: ${{ inputs.run-localtest == 'true' }}
+      uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ github.token }}
+
+    - name: Pull cached images
+      if: ${{ inputs.run-localtest == 'true' }}
+      working-directory: src/Runtime/localtest
+      run: |
+        args="${{ steps.set-profile.outputs.profile-args }}"
+        docker compose $args pull || echo "Pull failed, will build images instead"
+      shell: bash
+
     - name: Start localtest
       if: ${{ inputs.run-localtest == 'true' }}
       working-directory: src/Runtime/localtest
