--- a/.github/workflows/app-frontend-cypress.yml
+++ b/.github/workflows/app-frontend-cypress.yml
@@ -61,30 +61,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
-
       - name: Download the build folder
         uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5
         with:
           name: app-frontend-dist
           path: src/App/frontend/dist
 
-      - name: Pull docker images from registry
-        run: |
-          # Pull the images that were built and cached in the previous job
-          docker compose -f src/Runtime/localtest/docker-compose.yml --profile test-apps pull || true
-
-      - name: Start localtest
-        working-directory: src/Runtime/localtest
-        run: docker compose --profile test-apps up -d
+      - name: Run Local Environment
+        uses: ./.github/actions/app-run-local-env
+        with:
+          run-frontend: false
+          run-localtest: true
+          docker-profile: test-apps
 
       - name: Set Percy command based on PR draft status or main branch
         shell: bash
@@ -146,30 +134,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
-
       - name: Download the build folder
         uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5
         with:
           name: app-frontend-dist
           path: src/App/frontend/dist
 
-      - name: Pull docker images from registry
-        run: |
-          # Pull the images that were built and cached in the previous job
-          docker compose -f src/Runtime/localtest/docker-compose.yml --profile test-apps pull || true
-
-      - name: Start localtest
-        working-directory: src/Runtime/localtest
-        run: docker compose --profile test-apps up -d
+      - name: Run Local Environment
+        uses: ./.github/actions/app-run-local-env
+        with:
+          run-frontend: false
+          run-localtest: true
+          docker-profile: test-apps
 
       - name: Cypress run
         uses: cypress-io/github-action@7ef72e250a9e564efb4ed4c2433971ada4cc38b4 # v6
