explicitly run docker compose build when pull fails to prevent stale images

--- a/.github/actions/app-run-local-env/action.yaml
+++ b/.github/actions/app-run-local-env/action.yaml
@@ -62,7 +62,13 @@ runs:
       working-directory: src/Runtime/localtest
       run: |
         args="${{ steps.set-profile.outputs.profile-args }}"
-        docker compose $args pull || echo "Pull failed, will build images instead"
+
+        if ! docker compose $args pull; then
+          echo "Pull failed, building images from scratch..."
+          docker compose $args build
+        else
+          echo "Successfully pulled cached images"
+        fi
       shell: bash
 
     - name: Start localtest
