adds node version input to yarn-install composite action and use it from app-build-frotnend

--- a/.github/actions/app-build-frontend/action.yaml
+++ b/.github/actions/app-build-frontend/action.yaml
@@ -25,6 +25,7 @@ runs:
       uses: ./.github/actions/yarn-install
       with:
         working-directory: src/App/frontend
+        node-version: ${{ inputs.node-version }}
 
     - name: Build frontend
       if: steps.cache-frontend.outputs.cache-hit != 'true'
