--- a/.github/actions/app-run-local-env/action.yaml
+++ b/.github/actions/app-run-local-env/action.yaml
@@ -50,7 +50,7 @@ runs:
       uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
 
     - name: Login to GitHub Container Registry
-      if: ${{ inputs.run-localtest == 'true' }}
+      if: ${{ inputs.run-localtest == 'true' && (github.event.pull_request.head.repo.full_name == github.repository || github.event_name != 'pull_request') }}
       uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
       with:
         registry: ghcr.io
