chore: add postbuild variable for ENVIRONMENT for apps syncroot

--- a/infra/runtime/syncroot/base/apps-syncroot.yaml
+++ b/infra/runtime/syncroot/base/apps-syncroot.yaml
@@ -25,6 +25,9 @@ spec:
   force: false
   wait: true
   path: ./${ENVIRONMENT}
+  postBuild:
+    substitute:
+      ENVIRONMENT: ${ENVIRONMENT}
   sourceRef:
     kind: OCIRepository
     name: apps-syncroot-repo
