--- a/src/Runtime/pdf3/Makefile
+++ b/src/Runtime/pdf3/Makefile
@@ -1,17 +1,11 @@
-.PHONY: help format lint build-local test test-loop logs loadtest start start-minimal start-standard start-minimal-monitoring start-standard-monitoring stop
+.PHONY: help format lint build-local test test-loop logs loadtest start start-minimal start-standard start-minimal-monitoring start-standard-monitoring stop golangci-lint
 .DEFAULT_GOAL := help
-
-CACHE_DIR := .cache
-BIN_DIR := .cache/bin
 
 help: ## Show this help message
 	@echo 'Usage: make [target]'
 	@echo ''
 	@echo 'Available targets:'
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | awk 'BEGIN {FS = ":.*?## "}; {printf "  %-15s %s\n", $$1, $$2}'
-
-setup: ## Install required development tools
-	@go run ../test/fixture/cmd/setup --cache $(CACHE_DIR) --tools golangci-lint
 
 build: ## Build all packages
 	@echo "Building packages..."
@@ -29,14 +23,14 @@ tidy: ## Tidy go modules
 	@go mod tidy
 	@echo "✓ Modules tidied"
 
-fmt: setup ## Format Go code
+fmt: golangci-lint ## Format Go code
 	@echo "Formatting code..."
-	@$(BIN_DIR)/golangci-lint fmt
+	@"$(GOLANGCI_LINT)" fmt
 	@echo "✓ Code formatted"
 
-lint: setup ## Run linters with auto-fix
+lint: golangci-lint ## Run linters with auto-fix
 	@echo "Running linters..."
-	@$(BIN_DIR)/golangci-lint run --fix
+	@"$(GOLANGCI_LINT)" run --fix
 
 test: ## Run all tests (simple first, then smoke)
 	@go run ./cmd/tester test --keep-running
@@ -86,3 +80,33 @@ loadtest-env: ## Run k6 browser tests against remote environment (test-env.js)
 browser:
 	mkdir -p .cache/
 	cd .cache/ && npx @puppeteer/browsers install chrome-headless-shell@stable
+
+##@ Dependencies
+
+LOCALBIN ?= $(shell pwd)/bin
+$(LOCALBIN):
+	mkdir -p "$(LOCALBIN)"
+
+GOLANGCI_LINT = $(LOCALBIN)/golangci-lint
+GOLANGCI_LINT_VERSION ?= v2.5.0
+
+.PHONY: golangci-lint
+golangci-lint: $(GOLANGCI_LINT) ## Download golangci-lint locally if necessary.
+$(GOLANGCI_LINT): $(LOCALBIN)
+	$(call go-install-tool,$(GOLANGCI_LINT),github.com/golangci/golangci-lint/v2/cmd/golangci-lint,$(GOLANGCI_LINT_VERSION))
+
+# go-install-tool will 'go install' any package with custom target and name of binary, if it doesn't exist
+# $1 - target path with name of binary
+# $2 - package url which can be installed
+# $3 - specific version of package
+define go-install-tool
+@[ -f "$(1)-$(3)" ] && [ "$$(readlink -- "$(1)" 2>/dev/null)" = "$(1)-$(3)" ] || { \
+set -e; \
+package=$(2)@$(3) ;\
+echo "Downloading $${package}" ;\
+rm -f "$(1)" ;\
+GOBIN="$(LOCALBIN)" go install $${package} ;\
+mv "$(LOCALBIN)/$$(basename "$(1)")" "$(1)-$(3)" ;\
+} ;\
+ln -sf "$$(realpath "$(1)-$(3)")" "$(1)"
+endef
