--- a/src/Runtime/test/fixture/Makefile
+++ b/src/Runtime/test/fixture/Makefile
@@ -1,18 +1,14 @@
-.PHONY: help setup build test test-verbose test-coverage test-race clean tidy fmt lint check
-.PHONY: run stop
+.PHONY: help build test test-verbose test-coverage test-race clean tidy fmt lint check
+.PHONY: run stop golangci-lint
 .DEFAULT_GOAL := help
 
 CACHE_DIR := .cache
-BIN_DIR := .cache/bin
 
 help: ## Show this help message
 	@echo 'Usage: make [target]'
 	@echo ''
 	@echo 'Available targets:'
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | awk 'BEGIN {FS = ":.*?## "}; {printf "  %-15s %s\n", $$1, $$2}'
-
-setup: ## Install required development tools
-	@go run ./cmd/setup --cache $(CACHE_DIR) --tools golangci-lint,kubectl
 
 build: ## Build all packages
 	@echo "Building packages..."
@@ -30,14 +26,14 @@ tidy: ## Tidy go modules
 	@go mod tidy
 	@echo "✓ Modules tidied"
 
-fmt: setup ## Format Go code
+fmt: golangci-lint ## Format Go code
 	@echo "Formatting code..."
-	@$(BIN_DIR)/golangci-lint fmt
+	@"$(GOLANGCI_LINT)" fmt
 	@echo "✓ Code formatted"
 
-lint: setup ## Run linters with auto-fix
+lint: golangci-lint ## Run linters with auto-fix
 	@echo "Running linters..."
-	@$(BIN_DIR)/golangci-lint run --fix
+	@"$(GOLANGCI_LINT)" run --fix
 
 test: ## Run all tests
 	@echo "Running tests..."
@@ -72,5 +68,32 @@ run: ## Run the standard variant of the container runtime fixture
 stop: ## Stop the standard variant of the container runtime fixture
 	@go run ./cmd/fixture --action stop --variant standard --cache-dir $(CACHE_DIR)
 
-netshoot: setup ## Runs the nicolaka/netshoot container as interactive shell (for debugging purposes)
-	@$(BIN_DIR)/kubectl run tmp-shell --rm -i --tty --image nicolaka/netshoot
+##@ Dependencies
+
+LOCALBIN ?= $(shell pwd)/bin
+$(LOCALBIN):
+	mkdir -p "$(LOCALBIN)"
+
+GOLANGCI_LINT = $(LOCALBIN)/golangci-lint
+GOLANGCI_LINT_VERSION ?= v2.6.2
+
+.PHONY: golangci-lint
+golangci-lint: $(GOLANGCI_LINT) ## Download golangci-lint locally if necessary.
+$(GOLANGCI_LINT): $(LOCALBIN)
+	$(call go-install-tool,$(GOLANGCI_LINT),github.com/golangci/golangci-lint/v2/cmd/golangci-lint,$(GOLANGCI_LINT_VERSION))
+
+# go-install-tool will 'go install' any package with custom target and name of binary, if it doesn't exist
+# $1 - target path with name of binary
+# $2 - package url which can be installed
+# $3 - specific version of package
+define go-install-tool
+@[ -f "$(1)-$(3)" ] && [ "$$(readlink -- "$(1)" 2>/dev/null)" = "$(1)-$(3)" ] || { \
+set -e; \
+package=$(2)@$(3) ;\
+echo "Downloading $${package}" ;\
+rm -f "$(1)" ;\
+GOBIN="$(LOCALBIN)" go install $${package} ;\
+mv "$(LOCALBIN)/$$(basename "$(1)")" "$(1)-$(3)" ;\
+} ;\
+ln -sf "$$(realpath "$(1)-$(3)")" "$(1)"
+endef
