Replace time to range + clean up

--- a/src/Designer/backend/src/Designer/appsettings.json
+++ b/src/Designer/backend/src/Designer/appsettings.json
@@ -44,13 +44,8 @@
         "EnvironmentsUrl": "https://altinncdn.no/config/environments.json",
         "OrganizationsUrl": "https://altinncdn.no/orgs/altinn-orgs.json"
     },
-    "StudioGatewaySettings": {
-        "Test": {
-            "BaseUrl": "https://{org}.apps.tt02.altinn.no/runtime/gateway/api/v1"
-        },
-        "Prod": {
-            "BaseUrl": "https://{org}.apps.altinn.no/runtime/gateway/api/v1"
-        }
+    "GatewaySettings": {
+        "BaseUrl": "https://{org}.apps{env}.altinn.no/runtime/gateway/api/v1"
     },
     "MaskinportenClientSettings": {
         "test": {
@@ -66,13 +61,6 @@
             "Scope": "altinn:resourceregistry/resource.admin",
             "EncodedJwk": "",
             "ExhangeToAltinnToken": "true"
-        }
-    },
-    "MaskinportenClientForRuntime": {
-        "Test": {
-            "ClientId": "",
-            "Jwk": "",
-            "Scope": "altinn:studio/gateway"
         }
     },
     "ResourceRegistryIntegrationSettings": {
