--- a/src/Designer/backend/src/Designer/appsettings.json
+++ b/src/Designer/backend/src/Designer/appsettings.json
@@ -44,9 +44,6 @@
         "EnvironmentsUrl": "https://altinncdn.no/config/environments.json",
         "OrganizationsUrl": "https://altinncdn.no/orgs/altinn-orgs.json"
     },
-    "GatewaySettings": {
-        "BaseUrl": "https://{org}.apps{env}.altinn.no/runtime/gateway/api/v1"
-    },
     "MaskinportenClientSettings": {
         "test": {
             "Environment": "test",
@@ -165,14 +162,14 @@
     "MaskinportenClientForRuntime": {
         "Test": {
             "ClientId": "",
-            "Jwk": "",
+            "EncodedJwk": "",
             "Scope": "altinn:studio/gateway",
             "ExhangeToAltinnToken": false,
             "Environment": "test"
         },
         "Prod": {
             "ClientId": "",
-            "Jwk": "",
+            "EncodedJwk": "",
             "Scope": "altinn:studio/gateway",
             "ExhangeToAltinnToken": false,
             "Environment": "prod"
