--- a/.github/actions/yarn-install/action.yaml
+++ b/.github/actions/yarn-install/action.yaml
@@ -5,10 +5,6 @@ inputs:
     description: "The directory to run yarn install in"
     required: false
     default: "."
-  node-version:
-    description: "The node version to use"
-    required: false
-    default: "22"
 runs:
   using: "composite"
   steps:
@@ -17,7 +13,7 @@ runs:
       with:
         cache: 'yarn'
         cache-dependency-path: ${{ inputs.working-directory }}/yarn.lock
-        node-version: ${{ inputs.node-version }}
+        node-version: '22'
 
     - name: "Getting yarn cache directory path"
       id: yarn-cache-dir-path
