fix: use `production` as tag for apps syncroot in prod

--- a/infra/runtime/syncroot/prod/kustomization.yaml
+++ b/infra/runtime/syncroot/prod/kustomization.yaml
@@ -5,6 +5,13 @@ resources:
   - ../grafana-manifests
 patches:
   - target:
+      kind: OCIRepository
+      name: apps-syncroot-repo
+    patch: |-
+      - op: replace
+        path: /spec/ref/tag
+        value: production
+  - target:
       kind: Kustomization
       name: grafana-manifests
     patch: |-
