chore: create composite actions for building and running local env for app (#17180)

--- a/.github/actions/yarn-install/action.yaml
+++ b/.github/actions/yarn-install/action.yaml
@@ -13,6 +13,7 @@ runs:
       with:
         cache: 'yarn'
         cache-dependency-path: ${{ inputs.working-directory }}/yarn.lock
+        node-version: '22'
 
     - name: "Getting yarn cache directory path"
       id: yarn-cache-dir-path
