--- a/infra/runtime/syncroot/prod/kustomization.yaml
+++ b/infra/runtime/syncroot/prod/kustomization.yaml
@@ -5,6 +5,20 @@ resources:
   - ../grafana-manifests
 patches:
   - target:
+      kind: OCIRepository
+      name: apps-syncroot-repo
+    patch: |-
+      - op: replace
+        path: /spec/ref/tag
+        value: production
+  - target:
+      kind: Kustomization
+      name: syncroot-apps-kustomization
+    patch: |-
+      - op: replace
+        path: /spec/path
+        value: ./production
+  - target:
       kind: Kustomization
       name: grafana-manifests
     patch: |-
