--- a/.github/workflows/runtime-pdf3-build.yml
+++ b/.github/workflows/runtime-pdf3-build.yml
@@ -29,28 +29,20 @@ jobs:
           go-version-file: src/Runtime/pdf3/go.mod
           cache-dependency-path: src/Runtime/pdf3/go.sum
 
-      - name: Cache CLI tools
-        uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830 # v4
-        with:
-          path: src/Runtime/pdf3/.cache/bin
-          key: pdf3-tools-${{ runner.os }}-${{ hashFiles('src/Runtime/test/fixture/pkg/tools/.tool-versions') }}
-          restore-keys: |
-            pdf3-tools-${{ runner.os }}-
-
-      - name: Setup
-        run: make setup
-
       - name: Run fmt
         run: make fmt
 
       - name: Run linters
         run: make lint
 
+      - name: Run unit tests
+        run: make test
+
       - name: Run fixture
         run: make start-minimal
 
-      - name: Run tests
-        run: make test
+      - name: Run e2e tests
+        run: make test-e2e
 
       - name: Upload test logs
         if: failure()
