fix: use correct client settings for RuntimeGatewayClient

--- a/src/Designer/backend/src/Designer/appsettings.Production.json
+++ b/src/Designer/backend/src/Designer/appsettings.Production.json
@@ -1,2 +1,11 @@
 {
+    "MaskinportenClientForRuntime": {
+        "Prod": {
+            "ClientId": "",
+            "Jwk": "",
+            "Scope": "altinn:studio/gateway",
+            "ExhangeToAltinnToken": false,
+            "Environment": "prod"
+        }
+    }
 }
