--- a/src/Designer/backend/src/Designer/appsettings.Staging.json
+++ b/src/Designer/backend/src/Designer/appsettings.Staging.json
@@ -1,2 +1,11 @@
 {
+    "MaskinportenClientForRuntime": {
+        "Test": {
+            "ClientId": "",
+            "Jwk": "",
+            "Scope": "altinn:studio/gateway",
+            "ExhangeToAltinnToken": false,
+            "Environment": "test"
+        }
+    }
 }
