feat: Display publish status for code lists

--- a/src/Designer/frontend/tsconfig-strict.json
+++ b/src/Designer/frontend/tsconfig-strict.json
@@ -9,6 +9,7 @@
     "libs/studio-components",
     "libs/studio-components-legacy",
     "libs/studio-content-library/src/pages/CodeLists/CodeListsPage",
+    "libs/studio-content-library/src/utils",
     "libs/studio-feature-flags",
     "libs/studio-hooks",
     "libs/studio-icons",
