download built frontend in run env composite action

--- a/.github/actions/app-run-local-env/action.yaml
+++ b/.github/actions/app-run-local-env/action.yaml
@@ -90,6 +90,27 @@ runs:
         ALTINN3LOCAL_PORT: 80
         COMPOSE_FILE: 'docker-compose.yml:docker-compose.ci.yml'
 
+    - name: Download the built frontend
+      if: ${{ inputs.run-frontend == 'true' }}
+      uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5
+      with:
+        name: app-frontend-dist
+        path: src/App/frontend/dist
+
+    - name: Setup Node.js
+      if: ${{ inputs.run-frontend == 'true' }}
+      uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4
+      with:
+        node-version: '22'
+        cache: 'yarn'
+        cache-dependency-path: src/App/frontend/yarn.lock
+
+    - name: Install dependencies
+      if: ${{ inputs.run-frontend == 'true' }}
+      working-directory: src/App/frontend
+      run: yarn install --immutable
+      shell: bash
+
     - name: Start frontend server
       if: ${{ inputs.run-frontend == 'true' }}
       working-directory: src/App/frontend
