make localtest compose file work for default docker driver

--- a/.github/actions/app-build-localtest/action.yaml
+++ b/.github/actions/app-build-localtest/action.yaml
@@ -28,6 +28,7 @@ runs:
         DOCKER_BUILDKIT: 1
         COMPOSE_DOCKER_CLI_BUILD: 1
         BUILDKIT_PROGRESS: plain
+        USE_REGISTRY_CACHE: true
       run: |
         args=""
         if [[ "${{ inputs.docker-profile }}" != "" ]]; then
