--- a/.github/actions/app-run-local-env/action.yaml
+++ b/.github/actions/app-run-local-env/action.yaml
@@ -60,6 +60,8 @@ runs:
     - name: Pull cached images
       if: ${{ inputs.run-localtest == 'true' }}
       working-directory: src/Runtime/localtest
+      env:
+        COMPOSE_FILE: 'docker-compose.yml:docker-compose.ci.yml'
       run: |
         args="${{ steps.set-profile.outputs.profile-args }}"
 
@@ -86,6 +88,7 @@ runs:
       env:
         TEST_DOMAIN: local.altinn.cloud
         ALTINN3LOCAL_PORT: 80
+        COMPOSE_FILE: 'docker-compose.yml:docker-compose.ci.yml'
 
     - name: Start frontend server
       if: ${{ inputs.run-frontend == 'true' }}
