--- a/src/Runtime/StudioGateway/infra/kustomize/base/role.yaml
+++ b/src/Runtime/StudioGateway/infra/kustomize/base/role.yaml
@@ -9,3 +9,10 @@ rules:
       - helmreleases
     verbs:
       - get
+  - apiGroups:
+      - source.toolkit.fluxcd.io
+    resources:
+      - ocirepositories
+    verbs:
+      - get
+      - patch
