--- a/src/Runtime/StudioGateway/tests/StudioGateway.Api.Tests/StudioGateway.Api.Tests.csproj
+++ b/src/Runtime/StudioGateway/tests/StudioGateway.Api.Tests/StudioGateway.Api.Tests.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <PackageReference Include="KubernetesClient.Aot" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
+    <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" />
     <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="xunit.v3" />
