--- a/src/Runtime/StudioGateway/Directory.Packages.props
+++ b/src/Runtime/StudioGateway/Directory.Packages.props
@@ -13,6 +13,7 @@
     <PackageVersion Include="KubernetesClient.Aot" Version="18.0.13" />
 
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.TimeProvider.Testing" Version="10.0.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageVersion Include="xunit.v3" Version="3.2.1" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.5" />
