--- a/src/Runtime/StudioGateway/infra/kustomize/base/rolebinding.yaml
+++ b/src/Runtime/StudioGateway/infra/kustomize/base/rolebinding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: studio-gateway-helmrelease-reader
+  name: studio-gateway-role-binding
 subjects:
   - kind: ServiceAccount
     name: studio-gateway
     namespace: runtime-gateway
 roleRef:
   kind: ClusterRole
-  name: studio-gateway-helmrelease-reader
+  name: studio-gateway-role
   apiGroup: rbac.authorization.k8s.io
