refactor: Make strict null checks cover the entire libs folder

--- a/src/Designer/frontend/tsconfig-strict.json
+++ b/src/Designer/frontend/tsconfig-strict.json
@@ -3,15 +3,5 @@
   "compilerOptions": {
     "strictNullChecks": true
   },
-  "include": [
-    "libs/studio-assistant",
-    "libs/studio-browser-storage",
-    "libs/studio-components",
-    "libs/studio-components-legacy",
-    "libs/studio-content-library",
-    "libs/studio-feature-flags",
-    "libs/studio-hooks",
-    "libs/studio-icons",
-    "libs/studio-pure-functions"
-  ]
+  "include": ["libs"]
 }
