--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -59,6 +59,15 @@ jobs:
         with:
           browser: true
 
+      - name: Test network connectivity
+        run: |
+          echo "Testing connectivity to localhost:80..."
+          curl -v http://localhost:80/ || echo "Failed to connect to localhost:80"
+          echo "Testing connectivity to localhost:5101..."
+          curl -v http://localhost:5101/ || echo "Failed to connect to localhost:5101"
+          echo "Testing DNS resolution of local.altinn.cloud..."
+          nslookup local.altinn.cloud || echo "DNS lookup failed"
+
       - name: Run k6 browser test
         uses: grafana/run-k6-action@a15e2072ede004e8d46141e33d7f7dad8ad08d9d
         timeout-minutes: 10
