--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -50,6 +50,10 @@ jobs:
     steps:
       - uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
 
+      - name: Install bash and dependencies
+        run: |
+          apk add --no-cache bash curl
+
       - name: Run Local Environment
         uses: ./.github/actions/app-run-local-env
         with:
