--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Install bash and dependencies
         run: |
-          apk add --no-cache bash curl
+          apk add --no-cache bash curl docker
 
       - name: Run Local Environment
         uses: ./.github/actions/app-run-local-env
